Made changes in mvn config