@@ -20,6 +20,13 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M4</version>
 				<configuration>
+				<jvmArguments>-XX:+UseSerialGC</jvmArguments>
+					<jvmArguments>-XX:+UnlockExperimentalVMOptions</jvmArguments>
+					<jvmArguments>-XX:+UseCGroupMemoryLimitForHeap</jvmArguments>
+					<jvmArguments>-XX:MinHeapFreeRatio=20</jvmArguments>
+					<jvmArguments>-XX:MaxHeapFreeRatio=40</jvmArguments>
+					<jvmArguments>-XX:AdaptiveSizePolicyWeight=90</jvmArguments>
+					<jvmArguments>-XX:MaxRAMFraction=1</jvmArguments>
 					<systemPropertyVariables>
 						<environment>${env}</environment>
 					</systemPropertyVariables>
@@ -27,10 +34,11 @@
 						<additionalClasspathElement>${basedir}/target/classes
 						</additionalClasspathElement>
 					</additionalClasspathElements>
-					<parallel>both</parallel>
-					<useUnlimitedThreads>true</useUnlimitedThreads>
-					<!-- <threadCount>10</threadCount> -->
-					<forkCount>3</forkCount>
+					<parallel>classes</parallel>
+					<threadCount>8</threadCount>
+					<threadCountClasses>2</threadCountClasses>
+					<!-- <useUnlimitedThreads>true</useUnlimitedThreads> -->
+					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
 					<!-- <argLine>-Xmx2048M -XX:MaxPermSize=2048M</argLine> -->
 
@@ -38,31 +46,6 @@
 						<include>**/*Test.java</include>
 					</includes>
 				</configuration>
-				<!-- <executions> <execution> <goals> <goal>integration-test</goal> <goal>verify</goal> 
-					</goals> </execution> </executions> -->
-			</plugin>
-
-			<plugin>
-
-
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.2.1.RELEASE</version>
-
-				<configuration>
-					<skip>false</skip>
-					<excludeDevtools>false</excludeDevtools>
-					<mainClass>${Main-Class}</mainClass>
-				</configuration>
-				<executions>
-					<execution>
-						<id>repackage</id>
-						<phase>package</phase>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 
 
@@ -71,8 +54,14 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.0</version>
 				<configuration>
-					<!-- <forkCount>3</forkCount> <reuseForks>true</reuseForks> -->
 					<target>1.8</target>
+					<jvmArguments>-XX:+UseSerialGC</jvmArguments>
+					<jvmArguments>-XX:+UnlockExperimentalVMOptions</jvmArguments>
+					<jvmArguments>-XX:+UseCGroupMemoryLimitForHeap</jvmArguments>
+					<jvmArguments>-XX:MinHeapFreeRatio=20</jvmArguments>
+					<jvmArguments>-XX:MaxHeapFreeRatio=40</jvmArguments>
+					<jvmArguments>-XX:AdaptiveSizePolicyWeight=90</jvmArguments>
+					<jvmArguments>-XX:MaxRAMFraction=1</jvmArguments>
 				</configuration>
 			</plugin>
 
